--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "globe.gl": "^2.32.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
