test: vitest install, config, and API service tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "types": ["vitest", "node"] // Ensure "vitest" is included here
+  },
+  "include": ["vitest.setup.ts"]
 }
