--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^2.5.2",
