--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,3 +1,4 @@
+# .github/workflows/test.yml
 name: Node.js Run-Tests
 
 on:
@@ -23,4 +24,4 @@ jobs:
           cache: 'npm'
       - run: npm ci
       # - run: npm run build --if-present
-      - run: npm test
+      - run: npm run test:ci
