--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "test": "vitest",
+    "test:ci": "vitest run --coverage --reporter=verbose",
     "test:full": "vitest --reporter verbose",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
@@ -70,5 +71,24 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vitest": "^2.1.1"
+  },
+  "vitest": {
+    "testTimeout": 20000,
+    "globals": true,
+    "environment": "jsdom",
+    "setupFiles": [
+      "./src/test/setup.ts"
+    ],
+    "coverage": {
+      "reporter": [
+        "text",
+        "json",
+        "html"
+      ],
+      "exclude": [
+        "node_modules/",
+        "src/test/setup.ts"
+      ]
+    }
   }
 }
