--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "files": [],
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
+    "jsx": "react",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["vitest", "node"] // Ensure "vitest" is included here
+    "types": ["vitest", "node"]
   },
-  "include": ["vitest.setup.ts"]
+  "include": ["src/**/*", "tests/**/*", "vitest.setup.ts"]
 }
