--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.46.1",
     "@types/leaflet": "^1.9.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
