--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.1",
     "globe.gl": "^2.32.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.441.0",
