--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,3 +25,7 @@ jobs:
       - run: npm ci
       # - run: npm run build --if-present
       - run: npm run test:ci
+        env:
+          VITE_BASE_URL: 'https://trywooster.live/api'
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
