fix: added cleanup to gh actions to prevent conflicts

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,14 +22,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Clean and Build
         env:
           VITE_BASE_URL: 'https://trywooster.live/api'
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-        run: npm run build
+        run: |
+          rm -rf dist
+          npm run build
 
-      - name: Prepare deploy directory
+      - name: Clean and prepare remote directory
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -37,7 +39,13 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            sudo rm -rf /home/wooster/frontend/dist
+            # Stop nginx to prevent serving files while we're updating
+            sudo systemctl stop nginx
+
+            # Clean the directory
+            sudo rm -rf /home/wooster/frontend/dist/*
+
+            # Ensure directory exists with correct permissions
             sudo mkdir -p /home/wooster/frontend/dist
             sudo chown -R wooster:www-data /home/wooster/frontend/dist
             sudo chmod -R 775 /home/wooster/frontend/dist
@@ -51,3 +59,19 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: 'dist/'
           target: '/home/wooster/frontend'
+          strip_components: 1
+
+      - name: Post-deploy tasks
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            # Ensure correct permissions after copy
+            sudo chown -R wooster:www-data /home/wooster/frontend/dist
+            sudo chmod -R 775 /home/wooster/frontend/dist
+
+            # Start nginx again
+            sudo systemctl start nginx
